packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/valid/upgrade-object-type/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if upgrading of an object type works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:mc" regex-hard="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <!-- No changes, only a version increment. -->
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="2" compress="true" data-type="string:10:mc" regex-hard="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="a" display-name-plural="a" version="3" compress="true" data-type="string:10:mc" regex-hard="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="a" version="4" compress="true" data-type="string:10:mc" regex-hard="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="5" compress="true" data-type="string:10:mc" regex-hard="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="6" compress="false" data-type="string:10:mc" regex-hard="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="7" compress="false" data-type="string:10:mc" fuzzy-matching="phonetic" regex-hard="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="8" compress="false" data-type="string:10:mc" fuzzy-matching="phonetic" regex-hard="[a-z]|[A-Z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="9" compress="false" data-type="string:10:mc" fuzzy-matching="phonetic" regex-hard="[a-z]|[A-Z]" regex-soft="[a-z]"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="10" compress="false" data-type="string:10:mc" fuzzy-matching="phonetic" regex-hard="[a-z]|[A-Z]" regex-soft="[a-z]" xref="http://foo"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <object-type name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" version="11" compress="false" data-type="string:10:mc" fuzzy-matching="phonetic" regex-hard="[a-z]|[A-Z]" regex-soft="[a-z]" xref="http://bar"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
</edxml>
